fix sub settings description textarea color for dark mode

--- a/public/css/theme-dark-mode.css
+++ b/public/css/theme-dark-mode.css
@@ -102,7 +102,8 @@ main em {
 #name,
 #ruri,
 #to,
-#message {
+#message,
+#desc {
     border-color: #777777;
     border-radius: 2px;
     border-style: solid;
